# ConnectFourinator

./: CMakeLists.txt  main.cpp
src/ConnectFour/: ConnectFour.cpp  ConnectFour.h
src/ConnectFourBot/: ConnectFourBot.cpp  ConnectFourBot.h
